[package]
name = "wade"
version = "0.1.0"
authors = ["abrackx <abrackx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
bytes = "1.1.0"